monetran-anchor/k8s/portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  labels:
    app: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - image: 
            #gcr.io/phrasal-bond-247802/anchor_portal
            gcr.io/flawless-point-232417/anchor_portal            
          name: portal
          ports:
            - containerPort: 80
              name: portal
          readinessProbe:
            httpGet:
              path: /
              port: 80
