monetran-anchor/k8s/bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bridge
  labels:
    app: bridge
spec:
  #type: ClusterIP
  type: NodePort  
  ports:
    - port: 8006
  selector:
    app: bridge
