monetran-anchor/k8s/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  labels:
    app: portal
spec:
  #type: ClusterIP
  type: NodePort
  ports:
    - port: 80
  selector:
    app: portal
