monetran-anchor/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  selector:
    app: postgres
  type: ClusterIP
  #type: LoadBalancer
  #type: NodePort
  ports:
    - port: 5432
      #targetPort: 5432
      #protocol: TCP

#---
#
# apiVersion: v1
# kind: Service
# metadata:
#   name: db-lb
#   labels:
#     app: db-lb
# spec:
#   selector:
#     app: postgres
#   #type: ClusterIP
#   type: LoadBalancer
#   #type: NodePort
#   ports:
#     - port: 20432
#       targetPort: 5432
#       protocol: TCP
