monetran-anchor/k8s/transfer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transfer
  labels:
    app: transfer
spec:
  #type: ClusterIP
  type: NodePort
  ports:
    - port: 5000
  selector:
    app: transfer
